--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>Flexbox Crash Course</title>
 </head>
 
@@ -39,26 +35,36 @@
         <div class="container">
             <div>
                 <h1>Flexbox Crash Course</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem possimus, corrupti veniam officia qui unde minima neque voluptatum vel eaque animi commodi nesciunt in mollitia consequatur rem facere natus quos.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem possimus, corrupti veniam
+                    officia qui unde minima neque voluptatum vel eaque animi commodi nesciunt in mollitia consequatur
+                    rem facere natus quos.</p>
             </div>
             <img src="grid.svg" alt="Gird">
         </div>
     </header>
     <section class="boxes">
         <div class="container">
-            <div class="box">
-                <h2><i class="fas fa-arrows-alt-v"></i> Algment & Space</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam accusamus maxime excepturi cumque, magnam, voluptate repellat laboriosam asperiores ipsum suscipit nisi consequatur, incidunt repellendus rerum esse amet in voluptatem! Fugiat?</p>
-            </div>
-
+            
+                <div class="box">
+                    <h2><i class="fas fa-arrows-alt-v"></i>Algment & Space</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam accusamus maxime excepturi
+                        cumque, magnam, voluptate repellat laboriosam asperiores ipsum suscipit nisi consequatur,
+                        incidunt repellendus rerum esse amet in voluptatem! Fugiat?</p>
+                        <a href="axis.png">Details</a>
+                </div>
+            
             <div class="box">
                 <h2><i class="fas fa-arrows-alt"></i> Tricky Positioning</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sapiente, qui aliquid nam eligendi ratione fugit eaque possimus delectus, consectetur at quas iusto assumenda laudantium eos aperiam omnis repellat dignissimos!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sapiente, qui aliquid nam eligendi
+                    ratione fugit eaque possimus delectus, consectetur at quas iusto assumenda laudantium eos aperiam
+                    omnis repellat dignissimos!</p>
             </div>
 
             <div class="box">
                 <h2><i class="fas fa-mobile"></i> Responsive Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel sequi animi, enim at officiis ad ab officia, harum ducimus nihil? Accusantium reprehenderit nulla provident molestias! Officia vitae commodi ipsum?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel sequi animi, enim at officiis ad ab
+                    officia, harum ducimus nihil? Accusantium reprehenderit nulla provident molestias! Officia vitae
+                    commodi ipsum?</p>
             </div>
         </div>
     </section>
